digen noisy run working

--- a/Auto-Clean-Testing.ipynb
+++ b/Auto-Clean-Testing.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gabrielketron/AutoTest/AutoTestEnv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import os\n",
@@ -25,38 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            X0        X1        X2        X3        X4        X5        X6  \\\n",
-      "0     1.764052  0.400157  0.978738  2.240893  1.867558 -0.977278  0.950088   \n",
-      "1     0.144044  1.454274  0.761038  0.121675  0.443863  0.333674  1.494079   \n",
-      "2    -2.552990  0.653619  0.864436 -0.742165  2.269755 -1.454366  0.045759   \n",
-      "3     0.154947  0.378163 -0.887786 -1.980796 -0.347912  0.156349  1.230291   \n",
-      "4    -1.048553 -1.420018 -1.706270  1.950775 -0.509652 -0.438074 -1.252795   \n",
-      "...        ...       ...       ...       ...       ...       ...       ...   \n",
-      "9995 -0.030453  1.082681 -0.530580  0.602367 -2.138291 -0.056632  1.166444   \n",
-      "9996  2.520830 -0.124884  0.018068 -0.998623 -1.262734 -0.565107 -0.455238   \n",
-      "9997 -0.545705  1.696766 -0.508186  0.003621 -1.018515  0.251562 -0.338182   \n",
-      "9998 -0.367787 -0.568358 -0.721248  0.198280 -0.217422  0.914757  0.443757   \n",
-      "9999  0.428571 -0.164999  0.864963 -0.647662  0.720058 -0.337715 -2.028548   \n",
+      "                  X0        X1        X2        X3        X4        X5  \\\n",
+      "InstanceId                                                               \n",
+      "0           1.764052  0.400157  0.978738  2.240893  1.867558 -0.977278   \n",
+      "1           0.144044  1.454274  0.761038  0.121675  0.443863  0.333674   \n",
+      "2          -2.552990  0.653619  0.864436 -0.742165  2.269755 -1.454366   \n",
+      "3           0.154947  0.378163 -0.887786 -1.980796 -0.347912  0.156349   \n",
+      "4          -1.048553 -1.420018 -1.706270  1.950775 -0.509652 -0.438074   \n",
+      "...              ...       ...       ...       ...       ...       ...   \n",
+      "9995       -0.030453  1.082681 -0.530580  0.602367 -2.138291 -0.056632   \n",
+      "9996        2.520830 -0.124884  0.018068 -0.998623 -1.262734 -0.565107   \n",
+      "9997       -0.545705  1.696766 -0.508186  0.003621 -1.018515  0.251562   \n",
+      "9998       -0.367787 -0.568358 -0.721248  0.198280 -0.217422  0.914757   \n",
+      "9999        0.428571 -0.164999  0.864963 -0.647662  0.720058 -0.337715   \n",
       "\n",
-      "            X7        X8        X9  y  \n",
-      "0    -0.151357 -0.103219  0.410599  0  \n",
-      "1    -0.205158  0.313068 -0.854096  1  \n",
-      "2    -0.187184  1.532779  1.469359  1  \n",
-      "3     1.202380 -0.387327 -0.302303  0  \n",
-      "4     0.777490 -1.613898 -0.212740  0  \n",
-      "...        ...       ...       ... ..  \n",
-      "9995 -0.772096 -0.908988 -0.414217  0  \n",
-      "9996  0.555727  0.994368 -0.286562  0  \n",
-      "9997  1.014143 -0.582528  0.638790  1  \n",
-      "9998 -0.306204 -0.949056 -0.448083  1  \n",
-      "9999  0.726182 -1.167831 -1.285208  0  \n",
+      "                  X6        X7        X8        X9  y  \n",
+      "InstanceId                                             \n",
+      "0           0.950088 -0.151357 -0.103219  0.410599  0  \n",
+      "1           1.494079 -0.205158  0.313068 -0.854096  1  \n",
+      "2           0.045759 -0.187184  1.532779  1.469359  1  \n",
+      "3           1.230291  1.202380 -0.387327 -0.302303  0  \n",
+      "4          -1.252795  0.777490 -1.613898 -0.212740  0  \n",
+      "...              ...       ...       ...       ... ..  \n",
+      "9995        1.166444 -0.772096 -0.908988 -0.414217  0  \n",
+      "9996       -0.455238  0.555727  0.994368 -0.286562  0  \n",
+      "9997       -0.338182  1.014143 -0.582528  0.638790  1  \n",
+      "9998        0.443757 -0.306204 -0.949056 -0.448083  1  \n",
+      "9999       -2.028548  0.726182 -1.167831 -1.285208  0  \n",
       "\n",
       "[10000 rows x 11 columns]\n"
      ]
@@ -73,32 +84,303 @@
     "\n",
     "#print(digen.keys())\n",
     "#print(digen['digen8_4426'])\n",
-    "Test= pd.DataFrame(digen['digen8_4426']['X'])\n",
-    "yval = pd.DataFrame(digen['digen8_4426']['y'])\n",
-    "current_noise = digen['digen8_4426']['noise']\n",
+    "Test= pd.DataFrame(digennoise['digen8_4426']['X'])\n",
+    "yval = pd.DataFrame(digennoise['digen8_4426']['y'])\n",
+    "current_noise = digennoise['digen8_4426']['noise']\n",
     "yval.columns = ['y']\n",
     "yval.rename(columns = {'0':'y'}, inplace = True)\n",
     "out = pd.concat([Test, yval], axis=1)\n",
-    " \n",
+    "out.index.name = 'InstanceId'\n",
+    "out.to_csv('./data/DemoData/digen8_4426.csv')\n",
     "print(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#autotest = AutoRunner(dataset_names=['hcc-data_example_custom'], clean=False)"
+    "autotest = AutoRunner(dataset_names=['digen8_4426'], clean=False, class_label='y', instance_label='InstanceId')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426\n",
+      "INFO: Validating and Identifying Feature Types...\n",
+      "WARNING: User did not specify categorical vs quantitative features; feature types will be automatically assigned based on categorical_cutoff parameter\n",
+      "INFO: Running Initial EDA:\n",
+      "INFO: Initial Data Counts: ----------------\n",
+      "INFO: Instance Count = 10000\n",
+      "INFO: Feature Count = 10\n",
+      "INFO:     Categorical  = 0\n",
+      "INFO:     Quantitative = 10\n",
+      "INFO: Missing Count = 0\n",
+      "INFO:     Missing Percent = 0.0\n",
+      "INFO: Class Counts: ----------------\n",
+      "INFO: Class Count Information\n",
+      "INFO: \n",
+      "   Class  Instances\n",
+      "0      1       5173\n",
+      "1      0       4827\n",
+      "INFO: No textual categorical features, skipping label encoding\n",
+      "INFO: Running Feature Engineering\n",
+      "INFO: No Features with high missingness found\n",
+      "INFO: Not removing any features due to high missingness\n",
+      "INFO: No non-binary categorical features, skipping categorical encoding\n",
+      "INFO: Top 10 Correlated Features\n",
+      "INFO: \n",
+      "   Removed_Feature Correlated_Feature  Correlation\n",
+      "5               X0                 X5    -0.023813\n",
+      "15              X1                 X5    -0.022718\n",
+      "23              X2                 X3     0.022538\n",
+      "27              X2                 X7     0.019607\n",
+      "68              X6                 X8    -0.018813\n",
+      "18              X1                 X8    -0.018646\n",
+      "56              X5                 X6    -0.018500\n",
+      "28              X2                 X8    -0.016195\n",
+      "59              X5                 X9    -0.015959\n",
+      "8               X0                 X8    -0.012363\n",
+      "INFO: No Features with correlation higher that parameter\n",
+      "INFO: Running Basic Exploratory Analysis...\n",
+      "INFO: Processed Data Counts: ----------------\n",
+      "INFO: Instance Count = 10000\n",
+      "INFO: Feature Count = 10\n",
+      "INFO:     Categorical  = 0\n",
+      "INFO:     Quantitative = 10\n",
+      "INFO: Missing Count = 0\n",
+      "INFO:     Missing Percent = 0.0\n",
+      "INFO: Class Counts: ----------------\n",
+      "INFO: Class Count Information\n",
+      "INFO: \n",
+      "   Class  Instances\n",
+      "0      1       5173\n",
+      "1      0       4827\n",
+      "INFO: Categorical Features: []\n",
+      "INFO: \t Engineered Features: []\n",
+      "INFO: \t One Hot Features: []\n",
+      "INFO: Quantitative Features: ['X0', 'X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
+      "INFO: Final List of Features:\n",
+      "INFO: ['X0', 'X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
+      "INFO: Generating Feature Correlation Heatmap...\n",
+      "INFO: Running Univariate Analyses...\n",
+      "INFO: Plotting top significant 10 features.\n",
+      "INFO: ###################################################\n",
+      "INFO: Significant Univariate Associations:\n",
+      "INFO: X2: (p-val = 0.033211866228078486)\n",
+      "INFO: X1: (p-val = 0.3429809816528574)\n",
+      "INFO: X7: (p-val = 0.3658467519846238)\n",
+      "INFO: X8: (p-val = 0.40823179892880124)\n",
+      "INFO: X3: (p-val = 0.44461275145983425)\n",
+      "INFO: X0: (p-val = 0.4538885786234145)\n",
+      "INFO: X4: (p-val = 0.6080654552495636)\n",
+      "INFO: X5: (p-val = 0.6634687659008535)\n",
+      "INFO: X6: (p-val = 0.8284409907305214)\n",
+      "INFO: X9: (p-val = 0.9184119799587553)\n",
+      "INFO: Generating Univariate Analysis Plots...\n",
+      "INFO: Preparing Train and Test for: digen8_4426_CV_0\n",
+      "INFO: Imputing Missing Values...\n",
+      "INFO: Notice: No missing values found. Imputation skipped.\n",
+      "INFO: Scaling Data Values...\n",
+      "INFO: Saving Processed Train and Test Data...\n",
+      "INFO: digen8_4426 Phase 2 complete\n",
+      "INFO: Preparing Train and Test for: digen8_4426_CV_1\n",
+      "INFO: Imputing Missing Values...\n",
+      "INFO: Notice: No missing values found. Imputation skipped.\n",
+      "INFO: Scaling Data Values...\n",
+      "INFO: Saving Processed Train and Test Data...\n",
+      "INFO: digen8_4426 Phase 2 complete\n",
+      "INFO: Preparing Train and Test for: digen8_4426_CV_2\n",
+      "INFO: Imputing Missing Values...\n",
+      "INFO: Notice: No missing values found. Imputation skipped.\n",
+      "INFO: Scaling Data Values...\n",
+      "INFO: Saving Processed Train and Test Data...\n",
+      "INFO: digen8_4426 Phase 2 complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_0_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_0\n",
+      "INFO: Running Mutual Information...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV0 phase 3 mutual_information evaluation complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_1_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_1\n",
+      "INFO: Running Mutual Information...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV1 phase 3 mutual_information evaluation complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_2_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_2\n",
+      "INFO: Running Mutual Information...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV2 phase 3 mutual_information evaluation complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_0_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_0\n",
+      "INFO: Running MultiSURF...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV0 phase 3 multisurf evaluation complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_1_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_1\n",
+      "INFO: Running MultiSURF...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV1 phase 3 multisurf evaluation complete\n",
+      "INFO: ------------------------------------------------------- \n",
+      "INFO: Loading Dataset: digen8_4426_CV_2_Train\n",
+      "INFO: Prepared Train and Test for: digen8_4426_CV_2\n",
+      "INFO: Running MultiSURF...\n",
+      "INFO: Sort and pickle feature importance scores...\n",
+      "INFO: digen8_4426 CV2 phase 3 multisurf evaluation complete\n",
+      "INFO: Plotting Feature Importance Scores...\n",
+      "INFO:   Feature  Importance\n",
+      "0      X0    0.008010\n",
+      "4      X4    0.005898\n",
+      "5      X5    0.005169\n",
+      "2      X2    0.004873\n",
+      "7      X7    0.002456\n",
+      "1      X1    0.000000\n",
+      "3      X3    0.000000\n",
+      "6      X6    0.000000\n",
+      "8      X8    0.000000\n",
+      "9      X9    0.000000\n",
+      "INFO: Saved Feature Importance Plots at\n",
+      "INFO: ./DemoOutput/demo_experiment/digen8_4426/feature_selection/mutual_information/TopAverageScores.png\n",
+      "INFO:   Feature  Importance\n",
+      "0      X0    0.003299\n",
+      "2      X2    0.003208\n",
+      "5      X5    0.003016\n",
+      "6      X6   -0.000158\n",
+      "8      X8   -0.000224\n",
+      "3      X3   -0.000409\n",
+      "9      X9   -0.000463\n",
+      "1      X1   -0.000582\n",
+      "7      X7   -0.000633\n",
+      "4      X4   -0.000743\n",
+      "INFO: Saved Feature Importance Plots at\n",
+      "INFO: ./DemoOutput/demo_experiment/digen8_4426/feature_selection/multisurf/TopAverageScores.png\n",
+      "INFO: Applying collective feature selection...\n",
+      "INFO: digen8_4426 Phase 4 Complete\n",
+      "INFO: Running NB on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_0_Train.csv\n",
+      "INFO: digen8_4426 [CV_0] (NB) training complete. ------------------------------------\n",
+      "INFO: Running LR on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_0_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.5424982519574915\n",
+      "INFO:   Params: \n",
+      "INFO:     solver: sag\n",
+      "INFO:     C: 4531.5706079551155\n",
+      "INFO:     class_weight: balanced\n",
+      "INFO:     max_iter: 28\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_0] (LR) training complete. ------------------------------------\n",
+      "INFO: Running DT on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_0_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.9797594280225423\n",
+      "INFO:   Params: \n",
+      "INFO:     criterion: gini\n",
+      "INFO:     splitter: best\n",
+      "INFO:     max_depth: 19\n",
+      "INFO:     min_samples_split: 9\n",
+      "INFO:     min_samples_leaf: 2\n",
+      "INFO:     max_features: None\n",
+      "INFO:     class_weight: None\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_0] (DT) training complete. ------------------------------------\n",
+      "INFO: Running NB on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_1_Train.csv\n",
+      "INFO: digen8_4426 [CV_1] (NB) training complete. ------------------------------------\n",
+      "INFO: Running LR on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_1_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.5165957363578751\n",
+      "INFO:   Params: \n",
+      "INFO:     solver: saga\n",
+      "INFO:     C: 31550.68796449575\n",
+      "INFO:     class_weight: balanced\n",
+      "INFO:     max_iter: 131\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_1] (LR) training complete. ------------------------------------\n",
+      "INFO: Running DT on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_1_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.9359925102126695\n",
+      "INFO:   Params: \n",
+      "INFO:     criterion: gini\n",
+      "INFO:     splitter: best\n",
+      "INFO:     max_depth: 29\n",
+      "INFO:     min_samples_split: 10\n",
+      "INFO:     min_samples_leaf: 5\n",
+      "INFO:     max_features: None\n",
+      "INFO:     class_weight: balanced\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_1] (DT) training complete. ------------------------------------\n",
+      "INFO: Running NB on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_2_Train.csv\n",
+      "INFO: digen8_4426 [CV_2] (NB) training complete. ------------------------------------\n",
+      "INFO: Running LR on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_2_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.5621097741451181\n",
+      "INFO:   Params: \n",
+      "INFO:     solver: sag\n",
+      "INFO:     C: 1.4998050683235835\n",
+      "INFO:     class_weight: balanced\n",
+      "INFO:     max_iter: 69\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_2] (LR) training complete. ------------------------------------\n",
+      "INFO: Running DT on ./DemoOutput/demo_experiment/digen8_4426/CVDatasets/digen8_4426_CV_2_Train.csv\n",
+      "INFO: Best trial:\n",
+      "INFO:   Value: 0.9806015526731877\n",
+      "INFO:   Params: \n",
+      "INFO:     criterion: entropy\n",
+      "INFO:     splitter: best\n",
+      "INFO:     max_depth: 22\n",
+      "INFO:     min_samples_split: 27\n",
+      "INFO:     min_samples_leaf: 3\n",
+      "INFO:     max_features: None\n",
+      "INFO:     class_weight: balanced\n",
+      "INFO:     random_state: None\n",
+      "INFO: digen8_4426 [CV_2] (DT) training complete. ------------------------------------\n",
+      "INFO: Running Statistics Summary for digen8_4426\n",
+      "INFO: Running stats on Naive Bayes\n",
+      "INFO: Running stats on Logistic Regression\n",
+      "INFO: Running stats on Decision Tree\n",
+      "INFO: Generating ROC and PRC plots...\n",
+      "INFO: Saving Metric Summaries...\n",
+      "INFO: Generating Metric Boxplots...\n",
+      "INFO: Running Non-Parametric Statistical Significance Analysis...\n",
+      "INFO: Preparing for Model Feature Importance Plotting...\n",
+      "INFO: Generating Feature Importance Boxplot and Histograms...\n",
+      "INFO: Generating Composite Feature Importance Plots...\n",
+      "INFO: digen8_4426 phase 5 complete\n",
+      "INFO: Starting Report\n",
+      "INFO: Publishing Univariate Analysis\n",
+      "INFO: Publishing Model Prediction Summary\n",
+      "INFO: Publishing Average Model Prediction Statistics\n",
+      "INFO: Publishing Median Model Prediction Statistics\n",
+      "INFO: Publishing Feature Importance Summaries\n",
+      "INFO: Publishing Dataset Comparison Boxplots\n",
+      "INFO: Publishing Statistical Analysis\n",
+      "INFO: Publishing Runtime Summary\n",
+      "INFO: Phase 8 complete\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'./DemoOutput/demo_experiment/digen8_4426/model_evaluation/Summary_performance_mean.csv'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#autotest.run()"
+    "autotest.run()"
    ]
   }
  ],
