--- a/Auto-Clean-Testing.ipynb
+++ b/Auto-Clean-Testing.ipynb
@@ -20,7 +20,8 @@
     "import dill as pickle\n",
     "import pandas as pd\n",
     "\n",
-    "from streamline.runners.auto_runner import AutoRunner"
+    "from streamline.runners.auto_runner import AutoRunner\n",
+    "from streamline.runners.clean_optimize_runner import OptimizeClean"
    ]
   },
   {
@@ -88,11 +89,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanrun = OptimizeClean(dataset_name='digen8_4426', )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "autotest = AutoRunner(dataset_names=['digen8_4426'], clean=False, class_label='y', instance_label='InstanceId')"
+    "# autotest = AutoRunner(dataset_names=['digen8_4426'], clean=False, class_label='y', instance_label='InstanceId')"
    ]
   },
   {
@@ -362,7 +372,7 @@
     }
    ],
    "source": [
-    "output_csv = autotest.run()"
+    "#output_csv = autotest.run()"
    ]
   },
   {
@@ -400,12 +410,12 @@
     }
    ],
    "source": [
-    "print(output_csv)\n",
+    "#print(output_csv)\n",
     "\n",
-    "performance = pd.read_csv(output_csv)\n",
-    "print(performance)\n",
-    "print(performance['ROC AUC'].max())\n",
-    "print(performance.loc[performance['ROC AUC'].idxmax()][0])"
+    "#performance = pd.read_csv(output_csv)\n",
+    "#print(performance)\n",
+    "#print(performance['ROC AUC'].max())\n",
+    "#print(performance.loc[performance['ROC AUC'].idxmax()][0])"
    ]
   }
  ],
