Extracted Datasets From Pickle

--- a/Auto-Clean-Testing.ipynb
+++ b/Auto-Clean-Testing.ipynb
@@ -92,7 +92,7 @@
     "yval.rename(columns = {'0':'y'}, inplace = True)\n",
     "out = pd.concat([Test, yval], axis=1)\n",
     "out.index.name = 'InstanceId'\n",
-    "out.to_csv('./data/DemoData/digen8_4426.csv')\n",
+    "out.to_csv('./data/DigenStudy/digen8_4426.csv')\n",
     "print(out)"
    ]
   },
@@ -46185,7 +46185,7 @@
     }
    ],
    "source": [
-    "cleanrun = OptimizeClean(dataset_name=['digen8_4426'], n_trials=100)\n",
+    "cleanrun = OptimizeClean(dataset_name=['digen8_4426'], n_trials=100, data_path='./data/DigenStudy')\n",
     "cleanrun.run()\n",
     "print(cleanrun.param)\n"
    ]
