Renamed all class_labels to outcome_label

--- a/UsefulNotebooks/AccessingPickledMetricsAndPredictionProbabilities.ipynb
+++ b/UsefulNotebooks/AccessingPickledMetricsAndPredictionProbabilities.ipynb
@@ -131,7 +131,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "\n",
@@ -707,7 +707,7 @@
     "    original_headers = pd.read_csv(full_path + \"/exploratory/OriginalFeatureNames.csv\", sep=',').columns.values.tolist() # Get Original Headers\n",
     "    if instance_label != None: \n",
     "        original_headers.remove(instance_label)\n",
-    "    original_headers.remove(class_label)\n",
+    "    original_headers.remove(outcome_label)\n",
     "    for algorithm in algorithms: #loop through algorithms\n",
     "        print(algorithm)\n",
     "        # Define evaluation stats variable lists\n",
@@ -729,7 +729,7 @@
     "            headers = pd.read_csv(full_path + '/CVDatasets/' + each + '_CV_' + str(cv_count) + '_Test.csv').columns.values.tolist()\n",
     "            if instance_label != None: \n",
     "                headers.remove(instance_label)\n",
-    "            headers.remove(class_label)\n",
+    "            headers.remove(outcome_label)\n",
     "            for feature in original_headers:\n",
     "                if feature in headers:  # Check if current feature from original dataset was in the partition\n",
     "                    # Deal with features not being in original order (find index of current feature list.index()\n",
@@ -1084,7 +1084,7 @@
     "            \n",
     "            #Load associated testing dataset\n",
     "            test_data = pd.read_csv(full_path + '/CVDatasets/'+each+'_CV_' + str(cv_count) + '_Test.csv')\n",
-    "            probas_summary = test_data[[class_label,instance_label]]\n",
+    "            probas_summary = test_data[[outcome_label,instance_label]]\n",
     "\n",
     "            #Separate pickled results\n",
     "            probas_ = results[9]\n",
