--- a/UsefulNotebooks/ModelDecisionThresholdTestEval.ipynb
+++ b/UsefulNotebooks/ModelDecisionThresholdTestEval.ipynb
@@ -146,7 +146,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "sig_cutoff =float(metadata['Statistical Significance Cutoff'])\n",
@@ -632,7 +632,7 @@
     "            #load testing data\n",
     "            test_file_path = full_path + '/CVDatasets/' + each + \"_CV_\" + str(cvCount) + \"_Test.csv\"\n",
     "            test = pd.read_csv(test_file_path)\n",
-    "            testY = test[class_label].values\n",
+    "            testY = test[outcome_label].values\n",
     "            del test #memory cleanup\n",
     "            \n",
     "            #Load pickled metric file for given algorithm and cv\n",
