--- a/UsefulNotebooks/ReportingAppliedPredictionProbabilities.ipynb
+++ b/UsefulNotebooks/ReportingAppliedPredictionProbabilities.ipynb
@@ -91,7 +91,7 @@
     "metadata = pickle.load(file)\n",
     "file.close()\n",
     "# Load variables specified earlier in the pipeline from metadata\n",
-    "class_label = metadata['Class Label']\n",
+    "outcome_label = metadata['Class Label']\n",
     "instance_label = metadata['Instance Label']\n",
     "cv_partitions = int(metadata['CV Partitions'])\n",
     "\n",
@@ -1226,7 +1226,7 @@
     "\n",
     "        #Load target replication dataset (From which we will get the instancelabel values and class outcome values.)\n",
     "        rep_data = pd.read_csv(rep_data_path)\n",
-    "        probas_summary = rep_data[[class_label,instance_label]]\n",
+    "        probas_summary = rep_data[[outcome_label,instance_label]]\n",
     "\n",
     "        #Separate pickled results\n",
     "        probas_ = results[9]\n",
