Train-test split implemented

--- a/Auto-Clean_Study.ipynb
+++ b/Auto-Clean_Study.ipynb
@@ -12,6 +12,7 @@
     "import dill as pickle\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from streamline.runners.auto_runner import AutoRunner\n",
     "from streamline.runners.clean_optimize_runner import OptimizeClean\n"
    ]
@@ -40,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in digenkeys: \n",
+    "for i in digenkeys:\n",
+    "    print(i) \n",
     "    data = pd.DataFrame(digen[i]['X'])\n",
     "    yval = pd.DataFrame(digen[i]['y'])\n",
     "    current_noise = digen[i]['noise']\n",
@@ -51,10 +53,51 @@
     "    digennoise[i] = current_noise\n",
     "    if current_noise == 0.0: \n",
     "        outstring = './data/DigenStudy/No_Noise/' + i + '.csv'\n",
+    "        tempstring = './data/testfolder/' + i + '.csv'\n",
     "        out.to_csv(outstring)\n",
+    "        out.to_csv(tempstring)\n",
     "    else:\n",
     "        outstring = './data/DigenStudy/Noisy/' + i + '.csv'\n",
+    "        tempstring = './data/testfolder/' + i + '.csv'\n",
     "        out.to_csv(outstring)\n",
+    "        out.to_csv(tempstring)\n",
+    "    \n",
+    "    X_train, X_test,y_train, y_test = train_test_split(data, yval,test_size=0.08, shuffle=True)\n",
+    "\n",
+    "    train_set = pd.concat([X_train, y_train], axis =1)\n",
+    "    train_set.index.name = 'InstanceId'\n",
+    "    tempstring = './data/testfolder/' + i +'_train.csv'\n",
+    "    train_set.to_csv(tempstring)\n",
+    "    cleanrun = OptimizeClean(dataset_name=[i], n_trials=100, data_path='./data/testfolder')\n",
+    "    cleanrun.run()\n",
+    "    optimal = cleanrun.params\n",
+    "    current_auc = cleanrun.goal\n",
+    "\n",
+    "    tempstring = './data/testfolder/' + i +'_train.csv'\n",
+    "    test_set = pd.concat([X_test, y_test], axis =1)\n",
+    "    test_set.index.name = 'InstanceId'\n",
+    "\n",
+    "    try:\n",
+    "        most_recent_run = AutoRunner(**optimal, dataset_names=[i],data_path='./data/testfolder',\n",
+    "                                        gen_report=False, clean=False, class_label='target', \n",
+    "                                        instance_label='InstanceID', ml_algorithms=[\"NB\", \"LR\", \"DT\", \"EN\"], \n",
+    "                                        exclude=[\"GB\", \"RF\",\"ANN\",\"KNN\",\"GP\", 'eLCS', 'XCS', \"ExSTraCS\"]) # \"XGB\", \"LGB\", \"CGB\", \"SVM\",\"GB\", \"RF\"\n",
+    "        output_csv = most_recent_run.run(run_para=False)\n",
+    "        performance = pd.read_csv(output_csv)\n",
+    "        summary_chart = performance\n",
+    "        goal = performance[\"ROC AUC\"].max()\n",
+    "        best_model = performance.loc[performance[\"ROC AUC\"].idxmax()][0]\n",
+    "        png_out = output_csv.removesuffix('Summary_performance_mean.csv')\n",
+    "        png_out = png_out + 'Summary_ROC.png'\n",
+    "        final_model_comparison = plt.show(png_out)\n",
+    "    except:\n",
+    "        print('EXCEPTION')\n",
+    "        \n",
+    "    print(current_auc-goal)\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    \n",
     "\n"
    ]
   },
