Study run ready

--- a/Auto-Clean_Study.ipynb
+++ b/Auto-Clean_Study.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gabrielketron/AutoTest/AutoTestEnv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import os\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digen8_4426\n"
+     ]
+    },
+    {
+     "ename": "type",
+     "evalue": "name 'Test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m yval\u001b[39m.\u001b[39mcolumns \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39my\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      7\u001b[0m yval\u001b[39m.\u001b[39mrename(columns \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39my\u001b[39m\u001b[39m'\u001b[39m}, inplace \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m----> 8\u001b[0m out \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([Test, yval], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m      9\u001b[0m out\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mInstanceId\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     10\u001b[0m digennoise[i] \u001b[39m=\u001b[39m current_noise\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Test' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for i in digenkeys:\n",
     "    print(i) \n",
@@ -70,7 +98,7 @@
     "    train_set.to_csv(tempstring)\n",
     "    cleanrun = OptimizeClean(dataset_name=[i], n_trials=100, data_path='./data/testfolder')\n",
     "    cleanrun.run()\n",
-    "    optimal = cleanrun.params\n",
+    "    optimal = cleanrun.param\n",
     "    current_auc = cleanrun.goal\n",
     "\n",
     "    tempstring = './data/testfolder/' + i +'_train.csv'\n",
@@ -103,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
