Fix output to give best values, not recent

--- a/Auto-Clean-Testing.ipynb
+++ b/Auto-Clean-Testing.ipynb
@@ -448,8 +448,8 @@
     "train_set.to_csv(tempstring)\n",
     "cleanrun = OptimizeClean(dataset_name=['digen8_4426_train'], n_trials=1, data_path='./data/testfolder', class_label='y', instance_label=\"InstanceId\")\n",
     "cleanrun.run(run_para=True)\n",
-    "optimal = cleanrun.param\n",
-    "current_auc = cleanrun.goal\n",
+    "optimal = cleanrun.best_param\n",
+    "current_auc = cleanrun.best_goal\n",
     "os.remove(tempstring)\n"
    ]
   },
