Checked models are working

--- a/Auto-Clean-Testing.ipynb
+++ b/Auto-Clean-Testing.ipynb
@@ -878,11 +878,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "type",
+     "evalue": "'OptimizeClean' object has no attribute 'best_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(cleanrun\u001b[39m.\u001b[39;49mbest_model)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'OptimizeClean' object has no attribute 'best_model'"
+     ]
+    }
+   ],
    "source": [
-    "#print(cleanrun.param)"
+    "print(cleanrun.best_model)"
    ]
   },
   {
