--- a/Auto-Clean_Study.ipynb
+++ b/Auto-Clean_Study.ipynb
@@ -28,19 +28,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['digen8_4426', 'digen32_5191', 'digen39_5578', 'digen36_466', 'digen13_769', 'digen35_4426', 'digen1_6265', 'digen10_8322', 'digen23_5191', 'digen22_2433', 'digen24_2433', 'digen3_769', 'digen17_6949', 'digen26_7270', 'digen7_6949', 'digen16_5390', 'digen27_860', 'digen37_769', 'digen12_8322', 'digen6_466', 'digen25_2433', 'digen34_769', 'digen31_2433', 'digen33_769', 'digen38_4426', 'digen28_769', 'digen40_5390', 'digen2_6949', 'digen4_860', 'digen14_769', 'digen29_8322', 'digen21_6265', 'digen15_5311', 'digen19_7270', 'digen5_6949', 'digen11_7270', 'digen9_7270', 'digen20_5191', 'digen18_5578', 'digen30_4426'])\n",
+      "{'X':             X0        X1        X2        X3        X4        X5        X6  \\\n",
+      "0     1.764052  0.400157  0.978738  2.240893  1.867558 -0.977278  0.950088   \n",
+      "1     0.144044  1.454274  0.761038  0.121675  0.443863  0.333674  1.494079   \n",
+      "2    -2.552990  0.653619  0.864436 -0.742165  2.269755 -1.454366  0.045759   \n",
+      "3     0.154947  0.378163 -0.887786 -1.980796 -0.347912  0.156349  1.230291   \n",
+      "4    -1.048553 -1.420018 -1.706270  1.950775 -0.509652 -0.438074 -1.252795   \n",
+      "...        ...       ...       ...       ...       ...       ...       ...   \n",
+      "9995 -0.030453  1.082681 -0.530580  0.602367 -2.138291 -0.056632  1.166444   \n",
+      "9996  2.520830 -0.124884  0.018068 -0.998623 -1.262734 -0.565107 -0.455238   \n",
+      "9997 -0.545705  1.696766 -0.508186  0.003621 -1.018515  0.251562 -0.338182   \n",
+      "9998 -0.367787 -0.568358 -0.721248  0.198280 -0.217422  0.914757  0.443757   \n",
+      "9999  0.428571 -0.164999  0.864963 -0.647662  0.720058 -0.337715 -2.028548   \n",
+      "\n",
+      "            X7        X8        X9  \n",
+      "0    -0.151357 -0.103219  0.410599  \n",
+      "1    -0.205158  0.313068 -0.854096  \n",
+      "2    -0.187184  1.532779  1.469359  \n",
+      "3     1.202380 -0.387327 -0.302303  \n",
+      "4     0.777490 -1.613898 -0.212740  \n",
+      "...        ...       ...       ...  \n",
+      "9995 -0.772096 -0.908988 -0.414217  \n",
+      "9996  0.555727  0.994368 -0.286562  \n",
+      "9997  1.014143 -0.582528  0.638790  \n",
+      "9998 -0.306204 -0.949056 -0.448083  \n",
+      "9999  0.726182 -1.167831 -1.285208  \n",
+      "\n",
+      "[10000 rows x 10 columns], 'y': array([0, 1, 1, ..., 1, 1, 0]), 'noise': 0.0, 'y_no_noise': array([0, 1, 1, ..., 1, 1, 0])}\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"./data/DigenData/all_new_test_sets.pkl\",'rb') as f:\n",
     "    digen = pickle.load(f)\n",
     "\n",
-    "#print(digen.keys())\n",
+    "print(digen.keys())\n",
     "\n",
     "digenkeys = list(digen.keys())\n",
     "\n",
     "#print(digenkeys)\n",
-    "#print(digen['digen8_4426'])\n",
+    "print(digen['digen8_4426'])\n",
     "digennoise = {}\n",
     "traincsv = {}\n",
     "testcsv = {}\n",
